--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Timezoneless Time Literals In SPARQL Demo</title>
   </head>
-  <body>
+  <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
