chore: Update name

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timezoneless Time Literals In SPARQL Demo</title>
-  </head>
-  <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <title>Time Functions SPARQL Editor</title>
+    <meta name="description" content='A SPARQL Editor implementing Time Functions for the demo article on "It’s About Time: Time Functions for Comparing Partial and Floating Time Literals in SPARQL"'>
+</head>
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
